--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "gitbook build"
   },
   "dependencies": {
+    "gitbook-plugin-prism": "^2.4.0",
     "gitbook-plugin-toggle-chapters": "^0.0.3"
   }
 }
