--- a/.github/workflows/build-gitbook.yml
+++ b/.github/workflows/build-gitbook.yml
@@ -47,6 +47,7 @@ jobs:
         git config --local user.email "${{ secrets.U_EMAIL }}"
         git add .
         git commit -m "update gh-page from github actions"
+        git checkout -b gh-page
         git push --force  https://${{ secrets.U_NAME }}:${{ secrets.GH_TOKEN }}@${{ secrets.GH_REF }} gh-page
     - name: done
       run: echo 'all done!'
